player class and end turn

--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
+    <script src="player.js"></script>
 </head>
 
 <body>
@@ -96,6 +97,10 @@
         </div>
     </div>
     
+    <div id="buttom">
+        <button type="button" onclick="end_turn()">Finalizar turno</button>
+    </div>
+
     <div id="player_bar">
         <div id="player_1" class="player">
             <div id="p_header" style="background-color: rgb(0, 0, 154);">
